revised CSS and fixed layout issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 :root {
     --cardColor: #f1f1f1;
     --cardShadow: #ebebeb;
+    --cardHover: #eef2fa;
     --headingBackgroundColor: #292929;
     --headingAccordionColor: #2d3b67;
     --activeAccordionBtn: #93a8ea;
@@ -29,8 +30,18 @@ h2 {
     letter-spacing: 0.05em;
 }
 
+h3 {
+    margin:0px;
+}
+
 h4 {
-    margin: 5px 0 5px 0;
+    letter-spacing: 0.1em;
+    margin: 5px 0 5px;
+}
+
+h5 {
+    margin: 5px 0 5px;
+    font-size: 1em;
 }
 
 .section__h2 {
@@ -44,7 +55,7 @@ h4 {
     background-color: var(--headingAccordionColor);
     color: var(--textColorOnBackground);
     padding: 5px 0 5px 5px;
-    margin: 5px 20px;
+    margin: 5px 0px 5px 20px;
 }
 
 textarea {
@@ -97,8 +108,7 @@ textarea {
 }
 
 .card:hover {
-    transform: scale(1.02);
-    box-shadow: 0px 6px 5px var(--cardShadow);
+    background-color: var(--cardHover);
 }
 
 .filter__heading {
@@ -112,10 +122,12 @@ textarea {
     display: flex;
     flex-flow: column;
     background-color: var(--cardColor);
+    margin-left: 20px;
+    width: 60vmin;
 }
 
 .filter {
-    margin: 5px 5px 5px 5px;
+    margin: 5px;
 }
 
 
@@ -124,19 +136,24 @@ textarea {
     grid-column: 1 / span 2;
 }
 
-.note__container--form {
-    display: flex;
-    flex-flow: column wrap;
-    width: max-content;
-    padding: 0 30px 25px;
-    background-color: #bcc5d8;
-    border-radius: 10px;
-    box-shadow: 0px 5px 5px rgb(221, 221, 221);
-}
-
 .note__form {
     display: flex;
     flex-flow: column wrap;
+    padding: 0 20px 25px;
+    width: 30vmin;
+}
+
+.form__header {
+    color: var(--textColorOnBackground);
+    background-color: var(--headingBackgroundColor);
+    padding: 5px 0 5px 5px;
+}
+
+.form__body {
+    display: flex;
+    flex-flow: column wrap;
+    background-color: var(--cardColor);
+    padding:0px 30px 20px;
 }
 
 .note-label {
@@ -149,6 +166,10 @@ textarea {
     grid-column: 1 / span 2;
     grid-row: 6;
     height: min-content;
+}
+
+#note-save {
+    cursor: pointer;
 }
 
 .criminals__h2 {
